--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -26,21 +26,28 @@
     color: var(--purple);
 }
 
-.empty {
+.content {
     border-top: 1px solid #333333;
     border-radius: 8px;
     display: flex;
 }
 
-.empty .emptyBox {
+.content > * {
     flex: 1;
+
+}
+
+
+.content .emptyBox {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 8px; 
+    gap: 12px; 
     padding: 4rem 1.5rem;
     color: var(--gray-300);
     line-height: 1.3;
     letter-spacing: 0.1rem;
+    display: none;
 }
+
