--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -16,52 +16,13 @@
 
 .task .taskDescription p {
     width: 100%;
+    font-size: 0.875rem;
+    color: var(--gray-100);
+    line-height: 1.6;
 }
-
-
 
 .task .round {
-    flex: 1 2.25rem;
-    position: relative;
-}
-
-.task .round label {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    cursor: pointer;
-    height: 1.5rem;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 1.5rem;
-}
-
-.task .round label:after {
-    border: 2px solid #fff;
-    border-top: none;
-    border-right: none;
-    content: "";
-    height: 0.2rem;
-    left: 7px;
-    opacity: 0;
-    position: absolute;
-    top: 8px;
-    transform: rotate(-45deg);
-    width: 0.5rem;
-}
-
-.task .round input[type="checkbox"] {
-    visibility: hidden;
-}
-
-.task .round input[type="checkbox"]:checked + label {
-    background-color: #66bb6a;
-    border-color: #66bb6a;
-}
-
-.task .round input[type="checkbox"]:checked + label:after {
-    opacity: 1;
+    flex: 1 3rem;
 }
 
 .task button {
