--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -48,6 +48,11 @@
     color: var(--gray-300);
     line-height: 1.3;
     letter-spacing: 0.1rem;
-    display: none;
+}
+
+.content .taskList {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
 }
 
