--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -21,12 +21,65 @@
     line-height: 1.6;
 }
 
-.task .round {
+.task .taskDescription p {
+    width: 100%;
+    font-size: 0.875rem;
+    color: var(--gray-100);
+    line-height: 1.6;
+}
+
+.task .taskDescription .done {
+    color: var(--gray-300);
+    text-decoration: line-through;
+    border: none;
+}
+
+.task .taskDescription .round {
     flex: 1 3rem;
+    display: flex;
+    align-items: center;
+    margin-left: 0.5rem;
+}
+
+.task .taskDescription .round input {
+    position: relative;
+}
+.task .taskDescription .round input::before {
+    position: absolute;
+    content: "";
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    border: 2px solid var(--blue);
+    background-color: var(--gray-500);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    
+}
+
+.task .taskDescription .round input:checked::before {
+    background: var(--purple-dark);
+    border: 1px solid var(--purple-dark);
+}
+
+.task .taskDescription .round input:checked::after {
+    position: absolute;
+    content: "";
+    left: 4px;
+    top: 0px;
+    width: 4px;
+    height: 10px;
+    border: solid var(--gray-100);
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    cursor: pointer;
 }
 
 .task button {
     background: transparent;
     color: var(--gray-300);
     border: none;
+    
 }
